Bug 308351 - Cannot run MountMan from menu
Summary: Cannot run MountMan from menu
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: Martin Kostolný
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-13 23:18 UTC by Marcin Gryszkalis
Modified: 2018-03-11 01:04 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcin Gryszkalis 2012-10-13 23:18:18 UTC
One cannot run MountMan from menu, only unmount actions are available.

This bug is moved from old SF bugtracker
http://sourceforge.net/tracker/?func=detail&aid=2502285&group_id=6488&atid=106488


Reproducible: Always




Discussed on Krusader-devel
http://groups.google.com/group/krusader-devel/browse_thread/thread/7762e2b4ca78e014

Caused by:
I know the problem (MountMan from the menu cannot be opened).
Unfortunately the QT4 menus don't work the same way as QT3 did.
I've spent an hour trying to fix it, but it didn't manage, so I
started doing something else.
It's not sure that the KDE3 behaviour can be implemented in the KDE4
version.

Solution:
What about the next (temporary?) solution?
Tools -> Mountman: opens the mountman GUI
Tools -> (Un)mount: opens the mount-unmount commands of mountman.
Separating both functions in the Tools menu is probably much more easy
to implement.
Comment 1 Nikita Melnichenko 2018-02-20 08:29:10 UTC
Just faced this today. As a workaround I had to add MountMan button to a toolbar.

I think "Open MountMan" should be the first item of MountMan submenu, then a separator, then current Mount/Unmount options.
Comment 2 Martin Kostolný 2018-02-26 22:09:12 UTC
I like Nikita's proposal. This seems easy, I can do that.
Comment 3 Toni Asensi Esteve 2018-02-27 18:17:47 UTC
> I like Nikita's proposal

It seems good to me, too :-)
Comment 4 Martin Kostolný 2018-03-11 01:04:39 UTC
Git commit 32f752fadeb502e124e80aa7256c0436eb7d70d7 by Martin Kostolný.
Committed on 11/03/2018 at 00:57.
Pushed by martinkostolny into branch 'master'.

Add action 'Open MountMan' to MountMan submenu

Allow opening MountMan from Tools menu. Also code was cleaned up,
removed some unnecessary hacks and fix an issue with multiple
sorry message-boxes when a drive is (un)mounted unsuccessfully multiple times.

FIXED: [ 308351 ] Cannot run MountMan from menu

M  +56   -84   krusader/MountMan/kmountman.cpp
M  +6    -5    krusader/MountMan/kmountman.h

https://commits.kde.org/krusader/32f752fadeb502e124e80aa7256c0436eb7d70d7