Add action 'Open MountMan' to MountMan submenu

Allow opening MountMan from Tools menu. Also code was cleaned up,
removed some unnecessary hacks and fix an issue with multiple
sorry message-boxes when a drive is (un)mounted unsuccessfully multiple times.

FIXED: [ 308351 ] Cannot run MountMan from menu
BUG: 308351